2005-10-29 Braden McDaniel  <braden@endoframe.com>

	Use an intrusive reference count for nodes instead of node_ptr.
	boost::intrusive_ptr is now used as a smart pointer for nodes.

	* doc/Makefile.am:  Removed references to node_ptr.cpp and
	node_ptr.h.
	* mozilla-plugin/src/openvrml-player/player.cpp
	* src/libopenvrml/Makefile.am:  Removed references to
	node_ptr.cpp and node_ptr.h.
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g
	* src/libopenvrml/openvrml/X3DVrmlParser.hpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/node_impl_util.cpp
	* src/libopenvrml/openvrml/node_impl_util.h
	* src/libopenvrml/openvrml/node_ptr.cpp:  Removed file.
	* src/libopenvrml/openvrml/node_ptr.h:  Removed file.
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* tests/browser.cpp
	* tests/parse_anchor.cpp

2005-10-29 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header:  import "tabs.css" generated by
	doxygen 1.4.5.

2005-10-28 Braden McDaniel  <braden@endoframe.com>

	Removed obsolete test.

	* tests/Makefile.am
	* tests/browser_basic.cpp:  Removed file.

2005-10-28 Braden McDaniel  <braden@endoframe.com>

	Updated tests to reflect change to openvrml::browser constructor
	to take an openvrml::profile_id.

	* tests/browser.cpp
	* tests/parse.cpp
	* tests/parse_anchor.cpp
	* tests/test_browser.cpp
	* tests/test_browser.h

2005-10-27 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.h:  Removed unnecessary
	"explicit" keyword.

2005-10-27 Braden McDaniel  <braden@endoframe.com>
